[package]
name = "nuist-login"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1.6", features = ["derive"] }
